--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,9 +1,11 @@
 body {
 	background-color: silver;
-	color: rgb(44,122,46); 
+	/*color: rgb(44,122,46); */
+	color: rgb(0, 128, 0);
 	font-family: Georgia, Times, serif;
 	font-size: 16px; 
 	text-align: center;
+	border: 8px double #000;
 }
 
 #header {
@@ -12,6 +14,7 @@ body {
 	margin: 10px auto 10px auto;
 	border-width: 2px 0px 2px 0px;
 	border-style: solid;
+	border-color: black;
 }
 
 #content {
@@ -49,7 +52,7 @@ a:hover {
 }
 
 #currentLink {
-	color: rgb(44,122,46);	
+	color: rgb(0, 128, 0);	
 	text-decoration: none;
 }
 h1#textlogo {
